--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
 name = "bloggerkit"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.3.0"
+description = "A toolkit for interacting with the Google Blogger API"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.10"
 dependencies = []
+
+[project.urls]
+"Homepage" = "https://github.com/StatPan/bloggerkit"
